--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,13 @@
 plugins {
     id 'java'
     id 'org.cadixdev.licenser' version '0.5.0'
+    id 'maven-publish'
+    id 'maven'
 }
 
-group 'com.oroarmor'
-version '1.0.0-beta'
+group = 'com.oroarmor'
+project.archivesBaseName =  "${project.name}"
+version = '1.0.0-beta'
 
 repositories {
     mavenCentral()
@@ -23,9 +26,6 @@ dependencies {
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.3.1'
 }
 
-license {
-}
-
 task sourcesJar(type: Jar, group: "build") {
     classifier("sources")
     dependsOn(jar)
@@ -41,4 +41,14 @@ task javadocJar(type: Jar, group: "build") {
 jar {
     finalizedBy(sourcesJar)
     finalizedBy(javadocJar)
+}
+
+artifacts {
+    archives jar, sourcesJar, javadocJar
+}
+
+uploadArchives {
+    repositories {
+        mavenLocal()
+    }
 }
